--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@
 click
 Sphinx
 coverage
-awscli
 flake8
 python-dotenv>=0.5.1
 pandas
@@ -13,3 +12,12 @@ numpy
 seaborn
 matplotlib
 scikit-learn
+tqdm
+notebook
+boto3
+mypy-boto3-s3
+python-box==6.0.2
+ensure==1.0.2
+fastapi==0.78.0
+uvicorn==0.18.3
+Jinja2==3.1.2
