--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,6 +3,6 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: 
+  source_URL: https://github.com/aakashsyadav1999/nyc_energy_efficiency_ratings/blob/main/src/data/merged_data
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
