--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,6 +3,11 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://github.com/aakashsyadav1999/nyc_energy_efficiency_ratings/blob/main/src/data/merged_data
-  local_data_file: artifacts/data_ingestion/data.zip
+  source_URL: https://github.com/aakashsyadav1999/nyc_energy_efficiency_ratings/blob/main/data/processed/energy_disclosure_2021_rows.zip
+  local_data_file: artifacts/data_ingestion/energy_disclosure_2021_rows.csv
   unzip_dir: artifacts/data_ingestion
+
+data_validation:
+  root_dir: artifacts/data_validation
+  STATUS_FILE: artifacts/data_validation/status.txt
+  ALL_REQUIRED_FILES:['train','test','validation']
